--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,6 +1,2 @@
-﻿@page
-@model WishList.Views.IndexModel
-@{
-}
-
-<h1>Welcome</h1>
+﻿<h1>Welcome</h1>
+<a asp-action="Index" asp-controller="Item">View wishlist</a>
