--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -4,7 +4,6 @@
 <a asp-action="create">Add item</a>
 <ul>
   @foreach (var item in Model) {
-    <li>@item.Description</li>
-    <a asp-action="delete" asp-route-id="@item.Id">Delete</a>
+    <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">Delete</a></li>
   }
 </ul>
